@@ -1,6 +1,8 @@
 Release 0.6.2 (in development)
 ==============================
 
+* #130: Fix obscure IndexError in doctest extension.
+
 * #167: Make glossary sorting case-independent.
 
 * #196: Add a warning if an extension module doesn't have a
